<resources>
	<string name="app_name">Toolbox</string>
	<string name="toggle_filter">Touch to toggle the filter</string>
	<string name="take_screenshot">Take a screenshot</string>

	<string name="settings">Settings</string>
	<string name="screen_off">Screen off</string>
	<string name="screenshot">Screenshot</string>

	<string name="need_overlay_permission">You need to allow permission for Toolfox to show the screen filter to show</string>
	<string name="admin_permission_needed">You need to allow administration permission for Toolbox to turn the screen off</string>

	<string name="hello">Welcome to Toolbox!</string>

	<string name="settings_save">Save</string>
	<string name="settings_alpha_max">Max alpha value is 200, otherwise you can\'t see your screen!</string>

	<string name="setting_overlay_color">Overlay color</string>
	<string name="setting_overlay_color_alpha">Alpha</string>
	<string name="setting_overlay_color_red">Red</string>
	<string name="setting_overlay_color_green">Green</string>
	<string name="setting_overlay_color_blue">Blue</string>
</resources>
