<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	tools:context="net.iqwerty.toolbox.SettingsFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/setting_overlay_color">
			</TextView>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<android.support.design.widget.TextInputEditText
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight=".25"
					android:hint="@string/setting_overlay_color_alpha"/>

				<android.support.design.widget.TextInputEditText
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight=".25"
					android:hint="@string/setting_overlay_color_red"/>

				<android.support.design.widget.TextInputEditText
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight=".25"
					android:hint="@string/setting_overlay_color_green"/>

				<android.support.design.widget.TextInputEditText
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight=".25"
					android:hint="@string/setting_overlay_color_blue"/>

			</LinearLayout>
		</LinearLayout>

		<FrameLayout
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/settings_save"/>
		</LinearLayout>
	</LinearLayout>

</ScrollView>
